* Header/Footer colour transitions + Add home icon * Fix right click overflow * Align authors to right, push to the left a little

--- a/presentation/assets/css/style.css
+++ b/presentation/assets/css/style.css
@@ -1,4 +1,4 @@
-/* Global Style */
+/* Global style */
 @font-face {
   font-family: 'Bebas Neue';
   src: url('http://bearbear12345.github.io/school_ipt_2015_as1/presentation/assets/fonts/BebasNeue.eot?') format('eot'), url('http://bearbear12345.github.io/school_ipt_2015_as1/presentation/assets/fonts/BebasNeue.woff') format('woff'), url('http://bearbear12345.github.io/school_ipt_2015_as1/presentation/assets/fonts/BebasNeue.ttf') format('truetype');
@@ -8,6 +8,7 @@ html, body {
 	padding: 0;
 	height: 100%;
 	cursor: default;
+	overflow: hidden;
 }
 #zWrapper {
 	min-height: 100%;
@@ -21,11 +22,31 @@ html, body {
 #zHeader {
 	padding: 10px;
 	height: 30px;
-	background: #BAE4F0;
+	background-color: #BFBFBF;
 	text-align: center;
 	font-family: 'Bebas Neue';
 	font-size: 30px;
 	text-transform: uppercase;
+	-webkit-transition: all 400ms ease-in-out;
+	-moz-transition: all 400ms ease-in-out;
+	-o-transition: all 400ms ease-in-out;
+	transition: all 400ms ease-in-out;
+		
+}
+#zHeader_wrapper {
+	margin: auto;
+	max-width: 980px;
+}
+#zHomeIcon {
+	background: url(../images/home.svg);
+	cursor: pointer;
+	height: 35px;
+	width: 35px;
+	-webkit-transition: all 0.5s ease-in-out;
+	-moz-transition: all 0.5s ease-in-out;
+	-o-transition: all 0.5s ease-in-out;
+	transition: all 0.5s ease-in-out;
+	opacity: 0.1;
 }
 #zBody {
 	padding-top: 30px;
@@ -34,6 +55,7 @@ html, body {
 	height: 500px;
 	margin: auto;
 	text-align: center;
+		
 }
 #zFooter {
 	width: 100%;
@@ -41,12 +63,19 @@ html, body {
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	background: #BFBFBF;
+	padding: 5px;
+	background-color: #BFBFBF;
+	-webkit-transition: all 400ms ease-in-out;
+	-moz-transition: all 400ms ease-in-out;
+	-o-transition: all 400ms ease-in-out;
+	transition: all 400ms ease-in-out;
+		
 }
 #zFooter_wrapper {
 	margin: auto;
 	max-width: 980px;
 }
 #zAuthor {
-	float: right;
+	padding-right: 10px;
+	text-align: right;
 }
